Fixed some overflow issues, but only vertical one for now

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ header{
   align-items: center;
   justify-content: center;
   width: 200px;
-  height: 300px;
   font-size: 25px;
   padding: 15px;
   gap: 15px;
